@@ -1,5 +1,5 @@
-SUBDIRS = config doc include src test
-EXTRA_DIST = win32/* debian/* tools/* Doxyfile README-UPGRADE
+SUBDIRS = include src test tools win32 config debian doc
+EXTRA_DIST = autogen.sh configure.ac.in README-UPGRADE VERSION
 
 MAINTAINERCLEANFILES=Makefile.in aclocal.m4 config.h.in config.log configure \
 	stamp-h.in
@@ -8,8 +8,3 @@ includedir=$(prefix)/include/pqxx
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libpqxx.pc
-
-dist-hook:
-	rm -rf $(distdir)/win32/CVS $(distdir)/debian/CVS $(distdir)/tools/CVS
-	chmod u+x $(distdir)/debian/rules
-
